--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "cbca5584846442dca8a868768638a3ea"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>
+                        
   <script>
     let form = document.querySelector('form');
     form.addEventListener('submit', e => receiveForm(e));
@@ -158,6 +166,17 @@
         console.trace();
       }
       secondTrace();
+    }
+
+    errorBtns[14].addEventListener('click', globalError);
+
+    window.onerror = function(message, url, linenumber) {
+        alert('JavaScript error: ' + message + ' on line ' + linenumber + ' for ' + url);
+    }
+
+    function globalError() {
+      alert('Good code running when suddenly...');
+      abooM('bad code!');
     }
 
     function receiveForm (e) {
